[project]
name = "yhj-agent"
version = "0.1.0"
description = "基于 LangGraph 的状态感知多轮 Agent 执行系统"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "chromadb>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "jinja2>=3.1",
    "pyautogen>=0.4",
    "rank-bm25>=0.2",
    "lunar-python>=1.4.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
